# aeon-living-worlds

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PERF.md  PLAN.md  README.md  RENDERER.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  WORLD.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
aeon/: __init__.py  __main__.py  config.py  engine.py  observer.py  persistence.py  rng.py
aeon/agents/: __init__.py  interview.py  memory.py  person.py  population.py  schedule.py  spatial.py  traits.py
aeon/ai/: __init__.py  species_policy.py
aeon/governor/: __init__.py  (+6 more)
docs/: API.md  ARCHITECTURE.md  ASSETS.md  ASSET_LICENSES.md  CONFIG.md  CONTROLS.md  DASHBOARD.md  DEVELOPMENT.md  INDIVIDUALS.md  INSTALL.md  KNOWN_LIMITATIONS.md  RENDER_AVATARS_PLACEMENT_NOTES.md  ROADMAP.md  RUNNING.md  SIMULATION.md  SOCIETY.md  SOCIETY_MIND.md  TERRAIN_REFORGE_RESEARCH.md  TEXTURE_PACKS.md  TRAILER_CAPTURE.md  VISUAL_ART_DIRECTION.md  WORLDGEN.md
scripts/: capture_screenshots.cjs  capture_trailer.sh  check.sh
tests/: conftest.py  test_arbiter.py  test_civilizations.py  test_curriculum.py  test_discovery.py  test_encoding.py  test_interpret.py  test_launch_polish.py  test_living_systems.py  test_mind.py  test_model_sizes.py  test_numpy_fallback.py  test_placement.py  test_placement_density.py  test_restart.py  test_save_config.py  test_scheduler.py  test_seasons.py  test_serialization.py  test_spatial_embodiment.py  test_species_policy.py  test_trainer_pipeline.py  test_world_api.py  test_worldgen_believability.py
web/: index.html
(+68 files in other folders)
