[project]
name = "aeon-living-worlds"
version = "0.1.0"
description = "A browser-based living world simulation where civilizations rise, fracture, migrate, remember, and evolve."
readme = "README.md"
license = { text = "PolyForm-Noncommercial-1.0.0" }
requires-python = ">=3.11"
keywords = ["simulation", "civilization", "procedural-generation", "worldgen",
            "three.js", "webgl", "fastapi", "sandbox", "emergent"]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aeon = "aeon.__main__:main"

[project.urls]
Homepage = "https://github.com/linutesto/aeon-living-worlds"
Issues = "https://github.com/linutesto/aeon-living-worlds/issues"

[tool.aeon]
entrypoint = "aeon.__main__"
